🔨 fix category tags wrap

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ textarea:focus {
 	padding: 0;
 	display: flex;
 	gap: .5rem;
+	flex-wrap: wrap;
 }
 .category,
 .tag,
